<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ClassIn</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to presence attendance.</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="reset_password">Reset Password</string>
    <string name="courses">Merdeka Belajar Kampus Merdeka Teknologi Informasi \nTugas Akhir Teknologi Informasi \n[TIF4507] Sistem Interaktif (MP II) - Kelas A \n[TIF4506] Teknik Penulisan Karya Ilmiah - Kelas C \n[TIF4505] Data Warehouse dan Bisnis Intelligence - Kelas B \n[TIF4503] Enterprise Development Software - Kelas C \n[TIF4507P] Praktikum Sistem Interaktif - Kelas A</string>
    <string name="text1">Hey,</string>
    <string name="text2">How have you been?</string>
    <string name="profile_tag">Profile</string>
    <string name="notification_tag">Notifications</string>
    <string name="back_icon">back_icon</string>
    <string name="bell_icon">bell_icon</string>
    <string name="class_tag">Mobile Programming A</string>
    <string name="welcome">Welcome</string>
    <string name="search_courses">Search courses</string>
    <string name="class_distance"> You are <font color='#4CA456'>0.05 km</font> away from the class</string>
    <string name="class_distance_far"> You are <font color='red'>4.2 km</font> away from the class</string>
    <string name="announcement_tag">Announcement</string>
    <string name="search_announcement">Search Announcement</string>
    <string name="search_icon">Search</string>
    <string name="add_announcement">+ New Announcement</string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <!-- Geofence Hints -->
    <string name="not_started_hint"></string>
    <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
    <string name="ferry_building_hint">Go to a market with an amazing assortment of delicious foods. It is a San Francisco classic!</string>
    <string name="pier_39_hint">Go to a pier popular for tourist attractions, carnival games, fresh fish, and delicious sourdough bread!</string>
    <string name="union_square_hint">Go to a square named after Civil War rallies held there, but now known for its amazing shopping!</string>

    <!-- Geofence Locations -->
    <string name="golden_gate_bridge_location">at the Golden Gate bridge</string>
    <string name="ferry_building_location">in the Ferry Building</string>
    <string name="pier_39_location">at Pier 39</string>
    <string name="union_square_location">in Union Square</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="location_required_error">Location services must be enabled for this game.</string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">You found a clue <xliff:g id="geofence_location">%1$s</xliff:g>.</string>
    <string name="notification_channel_description">Geofence status notification</string>

</resources>