<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/btn_back_announcement"
        android:layout_width="20dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back_icon"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/btn_back_announcement"
        android:text="@string/announcement_tag"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/title"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="#FBFFFA">
            <ImageView
                android:id="@+id/gambar3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="2dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/search_icon"
                app:srcCompat="@drawable/search" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_announcement"
                android:background="#00000000"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/card1"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:backgroundTint="#4CA456">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card1"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/add_announcement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_announcement"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_announcement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@id/card2" >

        <TextView
            android:id="@+id/tv_no_announcements"
            android:text="You haven't announced \nanything to the students yet"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_announcements"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/announcement_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>