<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/log_in"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_extralight"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="50dp"
            >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:hint="NIM / NIP"
                android:inputType="text"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:hint="Password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Forget your password?"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/gray"
                android:textSize="12sp"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Log In"
                android:textSize="12sp"
                android:textAllCaps="false"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/got_issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/light_grey"
                app:contentPadding="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Got an issue?"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Report to administrator\n[ helpdesk@usu.ac.id ]"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>